--- a/sections/descripcion.tex
+++ b/sections/descripcion.tex
@@ -18,6 +18,7 @@
 
   La pantalla táctil del teléfono actúa tanto como salida y entrada de la interfaz de usuario.
   En ella se muestra la información de navegación y el usuario también puede interactuar con diversos elementos gráficos como menus, botones, listas y casillas de verificación para controlar y configurar la aplicación.
+  Como salida de interfaz de usuario también se cuentan los altavoces del teléfono que reproducen indicaciones sonoras de navegación.
 
   Al ser interiores de edificios los sitios a navegar, se propone que el mapa no se encuentre en el teléfono, sino en otro dispositivo dentro del edificio.
   De esta manera, cuando el usuario ingresa, descarga la información de navegación correspondiente.
@@ -27,7 +28,7 @@
 
   La \cref{fig:arquitectura_aplicacion} ilustra la arquitectura de la aplicación explicada.
 
-  \begin{figure}[!ht]
+  \begin{figure}[ht!]
     \centering
     \includegraphics[width=\linewidth, keepaspectratio]{arquitectura_aplicacion}
     \caption{Arquitectura de la aplicación desarrollada.}
