--- a/sections/introduccion.tex
+++ b/sections/introduccion.tex
@@ -25,8 +25,10 @@
 
   En este proyecto, se propone realizar una aplicación de realidad aumentada para teléfonos para la asistencia de navegación en interiores.
 
-  En ella, el usuario selecciona a dónde quiere dirigirse dentro de un edificio y se le indicará las direcciones a seguir de dos formas.
-  Por un lado, mediante flechas en un entorno de realidad mixta. Por otro lado, por medio de un minimapa virtual que le indicará la posición actual y el camino a seguir.
+  En ella, el usuario selecciona a dónde quiere dirigirse dentro de un edificio y se le indicará las direcciones a seguir de tres formas.
+  Por un lado, mediante flechas en un entorno de realidad mixta.
+  Por otro lado, por medio de un minimapa virtual que le indicará la posición actual y el camino a seguir.
+  Por último, se reproducen instrucciones de voz.
 
 \end{standalone}
 \end{document}
